archives/deprecated/01-peerauthentication-strict.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: medplum
spec:
  mtls:
    mode: STRICT
