archives/deprecated/02-peerauth-medplum-app-permissive.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: medplum-app-permissive
  namespace: medplum
spec:
  selector:
    matchLabels:
      app: medplum-app
  mtls:
    mode: PERMISSIVE
  portLevelMtls:
    "3000":
      mode: PERMISSIVE
