archives/deprecated/05-peerauth-postgresql-permissive.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: postgresql-permissive
  namespace: medplum
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  mtls:
    mode: PERMISSIVE
  portLevelMtls:
    "5432":
      mode: PERMISSIVE
