archives/deprecated/06-peerauth-redis-permissive.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: redis-permissive
  namespace: medplum
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  mtls:
    mode: PERMISSIVE
  portLevelMtls:
    "6379":
      mode: PERMISSIVE
