archives/deprecated/ingress-medplum-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medplum-app
  namespace: medplum
spec:
  ingressClassName: traefik
  rules:
    - host: app.phylcero.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: medplum-app
                port:
                  number: 3000
